tests/NormalTests/paczka1/small_fuzzy/23033325.err
Error in line 3: BQsi4QRYctl A438 51,1
Error in line 5: BQsi4QRYctl S468 25,5
